--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="orange">#FF7F00</color>
     <color name="black">#000000</color>
+    <color name="blue">#0000FF</color>
 </resources>
