--- a/app/src/main/res/layout/listview_optimused.xml
+++ b/app/src/main/res/layout/listview_optimused.xml
@@ -15,29 +15,40 @@
         android:scrollbars="none"
         android:listSelector="@android:color/transparent"
         />
-    <Button
-        android:id="@+id/btn_smoothScrollBy"
-        android:layout_width="80dp"
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/listview"
-        android:text="smoothScrollBy"
-        android:onClick="smoothScrollBy"/>
-    <Button
-        android:id="@+id/btn_smoothScrollByOffset"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/listview"
-        android:text="smoothScrollByOffset"
-        android:onClick="smoothScrollByOffset"
-        android:layout_toRightOf="@id/btn_smoothScrollBy"
-        android:layout_alignTop="@id/btn_smoothScrollBy"
-        />
-    <Button
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:text="smoothScrollTo"
-        android:onClick="smoothScrollTo"
-        android:layout_toRightOf="@id/btn_smoothScrollByOffset"
-        android:layout_alignTop="@id/btn_smoothScrollBy"
-        />
+        android:layout_alignParentBottom="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/btn_smoothScrollBy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/listview"
+                android:text="smoothScrollBy"
+                android:onClick="smoothScrollBy"/>
+            <Button
+                android:id="@+id/btn_smoothScrollByOffset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/listview"
+                android:text="smoothScrollByOffset"
+                android:onClick="smoothScrollByOffset"
+                android:layout_toRightOf="@id/btn_smoothScrollBy"
+                android:layout_alignTop="@id/btn_smoothScrollBy"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="smoothScrollTo"
+                android:onClick="smoothScrollTo"
+                android:layout_toRightOf="@id/btn_smoothScrollByOffset"
+                android:layout_alignTop="@id/btn_smoothScrollBy"
+                />
+        </LinearLayout>
+    </HorizontalScrollView>
 </RelativeLayout>
