--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,5 +15,11 @@
         android:src="@drawable/xml_bitmap"/>
 
     <!--XferMode练习-->
-    
+    <com.basepractice.view.SelfView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon="@drawable/woniu"
+        app:color="@color/colorAccent"
+        app:text="test"
+        app:text_size="12sp"/>
 </LinearLayout>
