--- a/app/src/main/res/layout/view_speak_animation.xml
+++ b/app/src/main/res/layout/view_speak_animation.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <com.basepractice.view.MikeView
         android:id="@+id/bottom_view"
@@ -9,13 +10,14 @@
         android:layout_height="wrap_content"
         android:src="@drawable/mike_small"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
 
     <RelativeLayout
         android:id="@+id/layout_speak"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <!--<com.basepractice.view.FloatMikeView-->
             <!--android:layout_width="wrap_content"-->
