增加微信主界面实现测试

--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -12,14 +12,59 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/xml_bitmap"/>
+        android:src="@drawable/xml_bitmap" />
 
-    <!--XferMode练习-->
-    <com.basepractice.view.SelfView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:icon="@drawable/woniu"
-        app:color="@color/colorAccent"
-        app:text="test"
-        app:text_size="12sp"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager_test"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <!--XferMode练习-->
+        <com.basepractice.view.SelfView
+            android:id="@+id/seletct_one"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="5dp"
+            app:color="@color/colorAccent"
+            app:icon="@drawable/woniu"
+            app:text="微信"
+            app:text_size="10sp" />
+
+        <com.basepractice.view.SelfView
+            android:id="@+id/seletct_two"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="5dp"
+            app:color="@color/colorAccent"
+            app:icon="@drawable/woniu"
+            app:text="微信"
+            app:text_size="10sp" />
+
+        <com.basepractice.view.SelfView
+            android:id="@+id/seletct_three"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="5dp"
+            app:color="@color/colorAccent"
+            app:icon="@drawable/woniu"
+            app:text="微信"
+            app:text_size="10sp" />
+
+        <com.basepractice.view.SelfView
+            android:id="@+id/seletct_four"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="5dp"
+            app:color="@color/colorAccent"
+            app:icon="@drawable/woniu"
+            app:text="微信"
+            app:text_size="10sp" />
+    </LinearLayout>
 </LinearLayout>
