--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,21 @@
         <attr name="text_size"/>
         <attr name="color"/>
     </declare-styleable>
+    
+    <attr name="progress_unreach_color" format="color"/>
+    <attr name="progress_unreach_height" format="dimension"/>
+    <attr name="progress_reach_color" format="color"/>
+    <attr name="progress_reach_height" format="dimension"/>
+    <attr name="progress_text_color" format="color"/>
+    <attr name="progress_text_size" format="dimension"/>
+    <attr name="progress_text_offset" format="dimension"/>
+    <declare-styleable name="HorizontalProgressbar">
+        <attr name="progress_unreach_color"/>
+        <attr name="progress_unreach_height"/>
+        <attr name="progress_reach_color"/>
+        <attr name="progress_reach_height"/>
+        <attr name="progress_text_color"/>
+        <attr name="progress_text_size"/>
+        <attr name="progress_text_offset"/>
+    </declare-styleable>
 </resources>
