--- a/app/src/main/res/layout/view_speak_animation.xml
+++ b/app/src/main/res/layout/view_speak_animation.xml
@@ -3,23 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.basepractice.view.MikeView
-        android:id="@+id/bottom_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/mike_small"
+    <RelativeLayout
+        android:id="@+id/layout_mikeview"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:background="@color/colorAccent">
+        <com.basepractice.view.MikeView
+            android:id="@+id/bottom_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/mike_small"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/layout_speak"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible">
-
-        <!--<com.basepractice.view.FloatMikeView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content" />-->
 
         <ImageView
             android:layout_width="wrap_content"
