--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="orange">#FF7F00</color>
     <color name="black">#000000</color>
     <color name="blue">#0000FF</color>
+    <color name="white">#ffffff</color>
 </resources>
