--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -73,6 +73,7 @@
         android:layout_height="match_parent">
 
         <com.basepractice.view.LeanTextView
+            android:id="@+id/learnTextView"
             android:layout_width="90dp"
             android:layout_height="90dp"
             app:text="你好啊"
@@ -91,6 +92,12 @@
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="testInvalide"
+            android:onClick="testInvalide"/>
     </RelativeLayout>
 
 
