--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -68,15 +68,15 @@
             app:text_size="10sp" />
     </LinearLayout>
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.basepractice.view.LeanTextView
             android:id="@+id/learnTextView"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            app:text="你好啊"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:text="你好"
             app:text_size="12sp"
             app:textColor="@color/white"
             app:textMarginTop="40dp"
@@ -93,12 +93,12 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="testInvalide"
-            android:onClick="testInvalide"/>
-    </RelativeLayout>
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="testInvalide"-->
+            <!--android:onClick="testInvalide"/>-->
+    </FrameLayout>
 
 
 </LinearLayout>
