--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -76,6 +76,7 @@
             android:id="@+id/learnTextView"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_gravity="center"
             app:text="你好"
             app:text_size="12sp"
             app:textColor="@color/white"
@@ -84,7 +85,7 @@
             app:textRotateDegress="45"
             app:color="@color/black"
             app:cornerRadius="2dp"
-            app:location="rightTop"
+            app:location="leftBottom"
             />
 
         <com.basepractice.view.MikeVolumView
