--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -111,5 +111,21 @@
             android:background="@color/black"
             app:progress_unreach_color="@color/colorAccent"
             app:progress_unreach_height="5dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp">
+            <com.basepractice.view.RoundImageView
+                android:id="@+id/round_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/black_wu"
+                app:type="round_corner"
+                app:circle_radius="10dp"
+                app:corner_radius="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"/>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
