--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -101,31 +101,53 @@
                 android:onClick="testInvalide"
                 android:text="testInvalide" />
         </FrameLayout>
+
         <com.basepractice.view.HorizontalProgressbar
             android:id="@+id/horizon_progressBar"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            app:progress_text_color="@color/blue"
+            android:background="@color/black"
             android:progress="0"
             app:progress_reach_height="2dp"
-            android:background="@color/black"
+            app:progress_text_color="@color/blue"
             app:progress_unreach_color="@color/colorAccent"
-            app:progress_unreach_height="5dp"/>
+            app:progress_unreach_height="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp">
+
             <com.basepractice.view.RoundImageView
                 android:id="@+id/round_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/black_wu"
-                app:type="round_corner"
                 app:circle_radius="10dp"
                 app:corner_radius="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"/>
+                app:type="round_corner" />
+
+            <com.basepractice.view.CanvasTestView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginLeft="10dp" />
         </LinearLayout>
+
+        <com.basepractice.view.CanvasTestViewTwo
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="10dp" />
+
+        <com.basepractice.view.PathView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="20dp" />
+
+        <com.basepractice.view.PathViewCubic
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="20dp"/>
     </LinearLayout>
 </ScrollView>
