--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -155,6 +155,10 @@
             android:layout_height="100dp"
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            app:text_size="50sp"
+            app:minTextSize="10sp"
+            app:textColor="@color/colorAccent"
+            app:minAlpha="0.1"/>
     </LinearLayout>
 </ScrollView>
