--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -13,10 +13,17 @@
             android:layout_width="100dp"
             android:layout_height="100dp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/xml_bitmap" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/xml_bitmap" />
+            <com.basepractice.view.DrawBitmap
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager_test"
