--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -16,13 +16,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
                 android:src="@drawable/xml_bitmap" />
+
             <com.basepractice.view.DrawBitmap
                 android:layout_width="50dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <android.support.v4.view.ViewPager
@@ -163,9 +166,9 @@
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
-            app:text_size="50sp"
+            app:minAlpha="0.1"
             app:minTextSize="10sp"
             app:textColor="@color/colorAccent"
-            app:minAlpha="0.1"/>
+            app:text_size="50sp" />
     </LinearLayout>
 </ScrollView>
