增加圆形进度条

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,4 +78,14 @@
         <!--0.0到1.0-->
         <attr name="minAlpha" format="float"/>
     </declare-styleable>
+
+    <declare-styleable name="CircleProgressBar">
+        <attr name="text"/>
+        <attr name="text_size"/>
+        <attr name="textColor"/>
+        <attr name="oval_radius" format="dimension"/>
+        <attr name="oval_color" format="color"/>
+        <attr name="circle_width" format="dimension"/>
+        <attr name="circle_color" format="color"/>
+    </declare-styleable>
 </resources>
