增加圆形进度条

--- a/app/src/main/res/layout/circle_progressbar_layout.xml
+++ b/app/src/main/res/layout/circle_progressbar_layout.xml
@@ -10,6 +10,9 @@
         android:layout_height="100dp"
         app:circle_color="@color/blue"
         app:circle_width="2dp"
-        app:oval_color="@color/colorPrimary"/>
+        app:oval_color="@color/colorPrimary"
+        app:text="跳过"
+        app:textColor="@color/orange"
+        app:text_size="10sp" />
 
 </LinearLayout>
