定时器测试 增加okhttp-jar

--- a/app/src/main/res/layout/android_draw_layout.xml
+++ b/app/src/main/res/layout/android_draw_layout.xml
@@ -126,6 +126,16 @@
                 app:corner_radius="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"/>
+            <com.basepractice.view.CircleProgressView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="20dp"
+                app:reach_circle_width="2dp"
+                app:unreach_circle_width="5dp"
+                app:reach_color="@color/colorAccent"
+                app:unreach_color="@color/blue"
+                android:progress="90"
+                android:background="@color/black"/>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
