--- a/app/src/main/res/layout/circle_progressbar_layout.xml
+++ b/app/src/main/res/layout/circle_progressbar_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,12 +9,15 @@
         android:id="@+id/circle_progressBar"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:circle_color="@color/blue"
-        app:circle_width="2dp"
+        app:circle_color="@color/red"
+        app:circle_width="10dp"
         app:oval_color="@color/colorPrimary"
         app:text="跳过"
         app:textColor="@color/orange"
         app:text_size="10sp"
-        app:oval_radius="50dp"/>
+        app:oval_radius="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/black"/>
 
-</LinearLayout>
+</RelativeLayout>
