--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="black">#000000</color>
     <color name="blue">#0000FF</color>
     <color name="white">#ffffff</color>
+    <color name="red">#FF0000</color>
+
 </resources>
