--- a/app/src/main/res/layout/value_animator.xml
+++ b/app/src/main/res/layout/value_animator.xml
@@ -3,14 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="translationX"
-        android:onClick="testTranslationX"
-        android:layout_marginLeft="50dp"
-        android:background="@color/colorAccent"/>
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="50dp">
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="translationX"
+            android:onClick="testTranslationX"
+            android:layout_marginLeft="50dp"
+            android:background="@color/colorAccent"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/text2"
@@ -44,12 +48,4 @@
         android:onClick="scacleAnimation"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/btn_rotate"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="动画"
-        android:onClick="dialogAnimation"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/btn_scale"/>
 </RelativeLayout>
