--- a/app/src/main/res/layout/event_dispatch.xml
+++ b/app/src/main/res/layout/event_dispatch.xml
@@ -5,6 +5,7 @@
     android:background="@color/black">
 
     <com.basepractice.event.dispatch.view.MViewGroupB
+        android:id="@+id/viewGroupB"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:background="@color/colorPrimary">
