--- a/app/src/main/res/layout/value_animator.xml
+++ b/app/src/main/res/layout/value_animator.xml
@@ -3,23 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="translationX"
-        android:onClick="testTranslationX"
-        android:layout_marginLeft="50dp"
-        android:background="@color/colorAccent"/>
+    <RelativeLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="100dp"
+        android:background="@color/black"
+        android:layout_marginLeft="50dp">
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="translationX"
+            android:onClick="testTranslationX"
+            android:layout_marginLeft="50dp"
+            android:background="@color/colorAccent"/>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="translationX"
-        android:onClick="testTranslationX"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="300dp"/>
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="50dp"/>
+    <TextView
+        android:id="@+id/text3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="translationX"
+        android:layout_marginTop="300dp"
+        android:layout_marginLeft="50dp"/>
     <Button
         android:id="@+id/btn_trans"
         android:layout_width="wrap_content"
@@ -44,12 +57,4 @@
         android:onClick="scacleAnimation"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/btn_rotate"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="动画"
-        android:onClick="dialogAnimation"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/btn_scale"/>
 </RelativeLayout>
